# autotoolsTemplate

./: .cproject  .gitignore  .project  AUTHORS  Makefile.am  README.md  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: Makefile.am  README.md
examples/: Makefile.am  example.data
m4/: NOTES
man/: Makefile.am  manual  manual01
scripts/: DummyScript1.sh  Makefile.am  script01.sh
src/: Makefile.am  main.c
